# project/routes/player.js
@@ -6,7 +6,8 @@ const players_utils = require("./utils/players_utils");
 router.get("/partialDetails/:playerId",async (req,res,next) => {
     let playerInfo = [];
     try {
-        const playerInfo = await players_utils.getOnePlayerInfo(req.params.playerId) 
+        playerInfo = await players_utils.getOnePlayerInfo(req.params.playerId) 
+             
         res.send(playerInfo);
     } catch (error) {
     next(error);
@@ -16,17 +17,27 @@ router.get("/partialDetails/:playerId",async (req,res,next) => {
 router.get("/fullDetails/:playerId",async (req,res,next) => {
     let playerInfo = [];
     try {
-        const playerInfo = await players_utils.getMoreDataOfPlayer(req.params.playerId)
-        res.send(playerInfo);
+      playerInfo = await players_utils.getMoreDataOfPlayer(req.params.playerId)
+     
+      res.send(playerInfo);
     } catch (error) {
     next(error);
   }
+  //172104
 })
 
 router.get("/partialDetailsByName/:playerName",async (req,res,next) => {
   let playersInfo = [];
   try {
-      const playersInfo = await players_utils.getDataByName(req.params.playerName)
+      playersInfo = await players_utils.getDataByName(req.params.playerName)
+      
+      if(playersInfo.length === 0 ){
+        throw { status: 404, message: "There is no such player" };
+      }
+      // if(playerInfo === []) {
+      //   console.log("YESSSSSSSSSSSSSSS")
+      //   // throw { status: 404, message: "There is no such player" };
+      // }
       res.send(playersInfo);
   } catch (error) {
   next(error);
